--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745144.md#1" target="_blank">廖祖笙：杀人党血腥“执政”70年</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745144.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/08/608142357131550-150x120.jpg" align ="left"></a>习近平先生，你效忠的这个恶党，是个人尽皆知的杀人党。共匪的所谓“执政”史，说白了其实也就是一部血淋淋的杀人史。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745057.md#1" target="_blank">向真：二零二零新年祝愿</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11745057.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/02/09051104474210003-150x120.jpg" align ="left"></a>新岁来临，所谓“一元复始，万样更新”，象征世间除旧布新。终年奔波忙碌的人们，静思过往，反省今年得失；更策励未来，对新的一年抱持期待与祝愿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744656.md#1" target="_blank">王友群：香港人冒死举“天灭中共”标语抗议</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/hong-kong-poster-anti-communist-1200x800-600x400-1-150x120.jpg" align ="left"></a>12月22日，法新社的一张特写照片在社交媒体上广传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744130.md#1" target="_blank">文静：不流血不牺牲解体中共恶党的最好办法</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744130.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20180409-hsichiao-hk-01-600x400-150x120.jpg" align ="left"></a>中国大陆这两年网络管控越来越严，稍稍说一点对现实不满或批评的言论，轻则删号，重则被请喝茶和拘留。中共放出五毛、粉红和网评员，对网友的言论监视举报，经常有人暴出被派出所找去，网络上的敏感词越来越多，被删贴被炸号越来越严重，网友们对如此的状况又气愤又无奈。网友们愤怒的把那些举报者叫举报狗和蛆，他们截屏人家的贴子，举报、骂人.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11743741.md#1" target="_blank">袁斌：是中共发言人而不是别人在编造闹剧</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11743741.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5c7775e5c84b3862d88dfe295b764e53@1200x1200-150x120.jpg" align ="left"></a>日前，英国伦敦一名叫弗洛伦斯·维迪科姆的6岁女童打开从大型超市便利店连锁Tesco（中国前称乐购，又译特易购）购买的圣诞贺卡，准备给同学写祝福时，不料竟突然发现其中一张贺卡已经“写好了”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:35 AM			</td></tr>
@@ -21,17 +23,24 @@
 这不禁让人想起了早前英文大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 5:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741320.md#1" target="_blank">颜丹：中共对“小康社会”的界定何其荒谬</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741320.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1908301421442436-600x400-150x120.jpg" align ="left"></a>只要邪恶中共存在一天，它对人民的狂征暴敛就不会终止。中国人要“脱贫”、要“奔小康”，惟有先识破中共的谎言、认清中共的真脸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741306.md#1" target="_blank">王友群：中共“战狼外交”在瑞典踢到铁板</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741306.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1182587939-600x400-150x120.jpg" align ="left"></a>2019年，是中共“战狼外交”又一年。其中，最典型的代表人物，莫过于中共驻瑞典大使桂从友了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:38 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741286.md#1" target="_blank">张菁：山西农村封炉封灶尽显中共无良</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741286.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg" align ="left"></a>共产党建政70年来，传统的信仰和价值观被强力破坏了，可见如果想拥有心中的自由和幸福，拥有不被控制的真正人的生活，必须得去除共产党的因素。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 4:10 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740733.md#1" target="_blank">谢田：新冷战和旧冷战的三大不同</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1177975938-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>当今世界从政界到知识界、商界、业界，人们普遍认为，美国和中共的对峙，近年来已全面展开、迅速升级，可称之为一场新的冷战了。史丹佛大学胡佛研究所尼尔．弗格森（Niall Ferguson）研究员认为，第二次冷战在未来历史学家的眼里，会是从2019年开始的。在笔者看来，新冷战最明确的信号，应该是北大西洋公约组织（北约）在伦敦.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 1:29 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank">程晓容：上海囚徒求救信再揭中共奴工黑幕</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/2019-5-21-fox-11-program_08-ss-150x120.jpg" align ="left"></a>求救信见诸媒体的同一天，卡片销售商、英国最大零售商乐购（Tesco）迅速做出回应，宣布暂时停止在中国的一家工厂的生产，并展开调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 7:24 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739433.md#1" target="_blank">隋志：调查活摘器官 科学家入榜“十大”</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/3-23-1-150x120.jpg" align ="left"></a>近日全球知名的《自然》杂志网站，发表了二零一九年对科学最具影响力的十大科学家，其中包括找出新方法、揭露中共从事非法器官移植的澳大利亚麦格理大学（Macquarie University）临床伦理学教授温蒂?罗杰斯（Wendy Rogers）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:13 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740049.md#1" target="_blank">吴惠林：有感于2019年诺贝尔经济学奖</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740049.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1175845229-600x400-150x120.jpg" align ="left"></a>10月14日，2019年诺贝尔奖最后一个奖项—经济学奖得主揭晓，由美、法三位学者合得。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 6:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739870.md#1" target="_blank">【思想领袖】戴耀廷：香港抗议者的智慧（下）</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739870.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Benny-Tai-150x120.jpg" align ="left"></a>12月1日，英文《大纪元时报》节目《美国思想领袖》（American Thought Leader）主持人杨杰凯（Jan Jekielek）赴香港进行采访。香港大学法律系副教授戴耀延在接受专访时表示：如果香港的一些官员对香港自治和法治造成的一切损害负有责任，那么他们就应该承担这个责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 4:17 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744970.md#1" target="_blank">中立：神必严惩中共百年罪恶</a><br></h3>共产主义宣扬的是收缴人民私人财产，从而剥夺人民的最基本的生存权，全面控制思想自由新闻舆论，以无神论思想彻底洗劫人的大脑，从幼儿园就开始彻底扼杀个人灵魂，以此让人民失去尊严，以杀人的方式逼迫人民服从，中共政权起家，从毛泽东的“枪杆子里出政权”，牢牢掌控武器弹药枪支和监狱是中共维护政权的表面自信和唯一法器。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744948.md#1" target="_blank">云鹤天：《采桑子?重阳》新解</a><br></h3>贪官污吏黄赌毒，你也寻芳，他也寻芳，罂粟花儿分外香。
+今年过得真没劲，输得精光，陪得精光，贸战香江雪上霜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:41 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744758.md#1" target="_blank">文武：弹劾川普是在帮中共的忙</a><br></h3>前几天我有个认识的人，突然跑到我的工作室来，说美国总统川普被弹劾了，川普下台了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 6:16 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744745.md#1" target="_blank">郑纯清：从“挨门砸饭锅”到“挨户堵炉眼”</a><br></h3>二零二零年，实现小康年。
+小康什么样？前后比比看。
+一九五八年，跑步奔共产。
+锅灶挨门砸，碎铁土炉炼。
+公社大食堂，同吃大锅饭。
+胆敢不服从，斥给党捣乱。
+划为坏分子，狗头给砸烂。
+好锅变废渣，饿死几千万。
+都笑荒诞剧，谁料今重演？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744701.md#1" target="_blank">吕锡民：台湾是否加入RCEP的研议</a><br></h3>区域全面经济伙伴关系协定（Regional Comprehensive Economic Partnership，RCEP）历经7年28回合谈判，已在今（2019）年11月宣布完成协议，明（2020）年即将正式签署。RCEP是由东南亚国家协会十国（ASEAN）发起，由中国、日本、韩国、印度、澳洲、纽西兰等，与东盟有FT.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:41 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744185.md#1" target="_blank">陈思敏：中国经济好坏 国企利润透端倪</a><br></h3>12月23日，中共财政部公布今年前11个月全国（中央和地方）国有及国有控股企业（不含国有一级金融企业在内）主要经济指标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744054.md#1" target="_blank">田园：请进化论信徒提供进化论的证据</a><br></h3>如果你和进化论信徒讨论生命是否神创，他们通常会问你：你有证据吗？创世纪神话以及宗教经典不能算作证据。一般来说，谈话会就此结束。进化论信徒会洋洋自得：我们赢了，科学再一次战胜迷信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11743530.md#1" target="_blank">张林：汉人纷纷逃出新疆</a><br></h3>为了驯化新疆人，这些年，中共除了关押200万新疆人，进行残酷折磨，还用各种办法增加新疆的汉人数量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/24/n11741714.md#1" target="_blank">廖祖笙：恶党治下这般堵塞我的活路</a><br></h3>习近平先生，今天我同你说说我被堵塞了哪些活路，以便你自己分辨，曾经杀人盈野的恶党，在历经了几十年的演变后，是否真的已经“放下屠刀，立地成佛”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:26 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741571.md#1" target="_blank">文武：李泳和陈绍基究竟是谁害了谁</a><br></h3>今天我在大陆的媒体里看到了一篇报道文章，文章题目是“国家一级播音员，被抓后拖‘大老虎’下水，惊动纪委”。文章的内容是说中共前广东省公安厅厅长、省政法委书记、副省长陈绍基下台是被广东省电视台一级女播音员李泳拖下水的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:18 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740256.md#1" target="_blank">陈思敏：中共农村工作会议难掩农村基建腐败</a><br></h3>中共中央农村工作会议已于12月20日至21日召开。本次会议研究部署2020年“三农”工作，但依然是老调重弹要“加大力度”农村基建，并多次提及了水利等基础设施建设的目标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:23 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/news392_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
